# libreactor-refactor

./: Makefile.am  configure.ac  todo
example/: Makefile.am  async.c  benchmark.sh  cancel.c  event.c  http-client.c  httpd-minimal.c  httpd-minimal.txt  lookup.c  next.c  notify.c  queue.c  server.c  stream.c  timer.c
src/: reactor.h
src/reactor/: buffer.c  buffer.h  data.c  data.h  event.c  event.h  hash.h  http.c  http.h  list.c  list.h  map.h  mapi.h  maps.h  notify.c  notify.h  object.c  object.h  pool.c  pool.h  queue.c  queue.h  reactor.c  reactor.h  resolver.c  resolver.h  server.c  server.h  stream.c  stream.h  timer.c  timer.h  vector.c  vector.h
test/: basic.c  buffer.c  coverage.sh  data.c  event.c  headers.c  http.c  notify.c  object.c  pool.c  queue.c  reactor.c  resolver.c  server.c  stream.c  timer.c  valgrind.sh
